# kai_statistics

./: AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-library-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSS-CHECKPOINT.json  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-PATTERNS.md  01-REVIEW.md  01-USER-SETUP.md  01-VERIFICATION.md
docs/: installation.md
src/kai_statistics/: __init__.py  descriptive.py  io.py  profiling.py  testing.py
src/kai_statistics/_core/: __init__.py  errors.py  results.py  validation.py
tests/: test_package.py
tests/_core/: test_results.py  test_validation.py
