[project]
name = "kai_statistics"
version = "0.1.0"
description = "My statistical research toolbox"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "scipy>=1.13",
  "statsmodels>=0.14",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "jupyterlab>=4.2",
  "scikit-learn>=1.5",
  "gdown>=5.2",
]

[tool.uv]
package = true