[project]
name = "kai_statistics"
version = "0.1.0"
authors = [
  { name="Kai Hsieh", email="shadowkai0121@gmail.com" },
]
description = "My statistical research toolbox"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "scipy>=1.13",
  "statsmodels>=0.14",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "jupyterlab>=4.2",
  "scikit-learn>=1.5",
  "gdown>=5.2",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[project.urls]
Homepage = "https://github.com/shadowkai0121/kai_statistics"
Issues = "https://github.com/shadowkai0121/kai_statistics/issues"
